--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,11 @@ p {
 
 
 
-/* header #overrask {
-display: block;
+header #overrask {
+    padding: .4em 3em;
+    background-color: rgba(255, 165, 0, 0.6);
+    color: #000;
+/*display: block;
 
     position: relative;
     font-family: sans-serif;
@@ -61,8 +64,8 @@ display: block;
     -webkit-background-clip: text;
     -webkit-text-fill-color: rgba(255, 255, 255, 0);
 
-
-} */
+*/
+} 
 
 
 /* @keyframes animate {
