--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ p {
     position: fixed;
     top: 20%;
     left: 1em;
-background-color: #d8c11d;
+background-color: #D8C11D;
 padding: .2em 1em;
 z-index: 2;
 }
@@ -55,7 +55,7 @@ z-index: 2;
 
 header #overrask {
     padding: .4em 3em;
-    background-color: rgba(255, 165, 0, 0.6);
+    background-color: rgba(216, 193, 29, 0.6);
     color: #000;
 /*display: block;
 
@@ -92,7 +92,7 @@ header a {
     text-decoration: none;
     position: absolute;
     top: 60%;
-    color: orange;
+    color: #D8C11D;
    height: 100%;
    width: 100%;
 
