--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ summary {
 }
 
 body {
-    font: 12px/18px; font-family: 'News Cycle', sans-serif;
+    font: 12px/18px;
+    font-family: 'News Cycle', sans-serif;
     /*XXX*/
     background-color: #1c1c19;
 }
@@ -43,13 +44,14 @@ p {
     font-size: 2em;
 }
 
-#navneskilt {display: none;
+#navneskilt {
+    display: none;
     position: fixed;
     top: 20%;
     left: 1em;
-background-color: #d8c11d;
-padding: .2em 1em;
-z-index: 2;
+    background-color: #d8c11d;
+    padding: .2em 1em;
+    z-index: 2;
 }
 
 
@@ -57,7 +59,7 @@ header #overrask {
     padding: .4em 3em;
     background-color: rgba(255, 165, 0, 0.6);
     color: #000;
-/*display: block;
+    /*display: block;
 
     position: relative;
     font-family: sans-serif;
@@ -73,7 +75,7 @@ header #overrask {
     -webkit-text-fill-color: rgba(255, 255, 255, 0);
 
 */
-} 
+}
 
 
 /* @keyframes animate {
@@ -93,11 +95,11 @@ header a {
     position: absolute;
     top: 60%;
     color: orange;
-   height: 100%;
-   width: 100%;
+    height: 100%;
+    width: 100%;
 
-   background-color: rgba(0, 0, 0, 0.281);
-   animation: overskrift 2.5s linear infinite;
+    background-color: rgba(0, 0, 0, 0.281);
+    animation: overskrift 2.5s linear infinite;
 }
 
 @keyframes overskrift {
@@ -106,7 +108,7 @@ header a {
     }
 
     100% {
-       transform: translateY(0%);
+        transform: translateY(0%);
     }
 }
 
@@ -115,7 +117,7 @@ header a {
 header {
 
     background-image: url("../img/faellesskab.jpg");
-    
+
     width: 100%;
     padding: 20em 0;
     position: relative;
@@ -130,7 +132,7 @@ header {
     justify-content: center;
     align-items: center;
     height: 105vh;
-  /*  background-color: rgba(0, 0, 0, 0.881);*/
+    /*  background-color: rgba(0, 0, 0, 0.881);*/
 
 }
 
@@ -184,7 +186,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    
+
 }
 
 #sigjatext {
@@ -262,7 +264,7 @@ main {
 
 
 /* Parallax */
-.middle{
+.middle {
     position: relative;
     top: 50%;
     left: 50%;
@@ -271,17 +273,20 @@ main {
     text-align: center;
 }
 
-.middle img {width: 100%;}
+.middle img {
+    width: 100%;
+}
+
 .middle p {
     position: absolute;
     top: 43%;
     left: 50%;
-    transform: translate(-50%, -50%); 
-    line-height: 1.5em; 
+    transform: translate(-50%, -50%);
+    line-height: 1.5em;
     color: white;
 }
 
-.container .analog{
+.container .analog {
     background-image: url("../img/valgfag_analog.jpg");
 }
 
@@ -291,71 +296,63 @@ main {
 }
 
 /* Overrask dig selv på Eriksminde Efterskole */
-#overrask-overskrift h1, #overrask-overskrift h2{
+#overrask-overskrift h1,
+#overrask-overskrift h2 {
     text-align: center;
     font-size: 3em;
-    color: white; 
+    color: white;
 }
 
 #overrask-overskrift h1 {
-    margin-top: -4%; color: #d8c11d;
+    margin-top: -6%;
+    color: #d8c11d;
 }
 
-#citater p {
-    font-size: 1.1em; color: white;
+#citater {
+    position: relative; height: 20em;
 }
+
+#citater section p {
+    font-size: 1.1em;
+    color: white;
+    display: inline;
+    position: absolute;
+}
+
 #citat-1 {
-    position: relative;
-    left: 42%;
-    top: 87px
+  top: 6%;
+  left: 30%;
 }
 
-article #citater #citat-2 {
-    position: relative;
-    left: 3%;
-    top: -130px;
-    font-size: 1.4em;
-}
+#citat-2 {
+    top: 60%;
+    left: 2%;
+  }
 
-article #citater #citat-3 {
-    position: relative;
-    left: 65%;
-    top: -110px; 
-    font-size: 1.4em;
-    
-}
+#citat-3 {
+    top: 15%;
+    left: 50%;
+  }
 
-#citat-4 {
-    position: relative;
-    left: 65%;
-    top: -30px
-}
-
-article #citater #citat-5 {
-    position: relative;
-    left: 5%;
-    top: -30px;
-    font-size: 1.5em;
-}
-
-#citat-6 {
-    position: relative;
-    left: 15%;
-    top: -110px
-}
-
-#citat-7 {
-    position: relative;
-    left: 45%;
-    top: -230px
-}
-
-article #citater #citat-8 {
-    position: relative;
+  #citat-4 {
+    top: 40%;
     left: 70%;
-    top: -40px;
-    font-size: 1.4em;
-}
+  }
+
+  #citat-5 {
+    top: 85%;
+    left: 40%;
+  }
+
+  #citat-6 {
+    top: 30%;
+    left: 10%;
+  }
+
+  #citat-7 {
+    top: 70%;
+    left: 60%;
+  }
 
 
 /* Footer
