--- a/css/style.css
+++ b/css/style.css
@@ -13,27 +13,43 @@ summary {
     display: block;
 }
 
+
+@font-face {
+    font-family: 'bebas';
+    src: url(../fonts/BebasNeue-Regular.ttf);
+    font-style: normal;
+    font-weight: 100;
+}
+
+
+
 body {
-    font: 12px/18px; font-family: 'News Cycle', sans-serif;
-    /*XXX*/
+    font-family: bebas, sans-serif;
+    font-weight: 100;
     background-color: #1c1c19;
 }
 
 /* Alt der har noget med tekst at gøre
 ...............*/
 h2 {
+    font-family: bebas, sans-serif;
+    font-weight: 100;
+    color: #D8C11D;
     text-align: center;
     font-size: 3em;
-    color: white;
     padding: 6%
+    
 }
 
 h3,
 a {
-    color: white;
+    font-family: bebas, sans-serif;
+    font-weight: 100;
+    color: #D8C11D;
     font-size: 5em;
     text-align: center;
     margin-bottom: 7%;
+    
 
 }
 
