--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ h2 {
     text-align: center;
     font-size: 3em;
     padding: 6%
-    
 }
 
 h3,
@@ -49,7 +48,7 @@ a {
     font-size: 5em;
     text-align: center;
     margin-bottom: 7%;
-    
+
 
 }
 
@@ -214,16 +213,16 @@ main {
     right: 74%;
     z-index: 3;
     margin-top: 20%;
-    
+
 }
 
 #tekstJa {
     width: 25%;
     line-height: 1.6em;
     position: absolute;
-    margin-top: 30%;
+    margin-top: 20%;
     right: 8%;
-    
+
 }
 
 #cirkel {
@@ -253,6 +252,12 @@ main {
 
 #cirkler {
     position: relative;
+}
+
+#valgfagtekst {
+    position: absolute;
+    bottom: 35%;
+    left: 70%;;
 }
 
 #prikker {
@@ -321,7 +326,8 @@ main {
 }
 
 #citater {
-    position: relative; height: 20em;
+    position: relative;
+    height: 20em;
 }
 
 #citater section p {
@@ -332,44 +338,44 @@ main {
 }
 
 #citat-1 {
-  top: 6%;
-  left: 30%;
+    top: 6%;
+    left: 30%;
 }
 
 #citat-2 {
     top: 60%;
     left: 2%;
-  }
+}
 
 #citat-3 {
     top: 10%;
     left: 55%;
-  }
+}
 
-  #citat-4 {
+#citat-4 {
     top: 40%;
     left: 70%;
-  }
+}
 
-  #citat-5 {
+#citat-5 {
     top: 85%;
     left: 54%;
-  }
+}
 
-  #citat-6 {
+#citat-6 {
     top: 30%;
     left: 7%;
-  }
+}
 
-  #citat-7 {
+#citat-7 {
     top: 64%;
     left: 60%;
-  }
+}
 
-  #citat-8 {
+#citat-8 {
     top: 78%;
     left: 20%;
-  }
+}
 
 
 /* Footer
