--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,13 @@ summary {
     font-weight: 100;
 }
 
+@font-face {
+    font-family: 'street';
+    src: url(../fonts/street.ttf);
+    font-style: normal;
+    font-weight: 100;
+}
+
 
 
 body {
@@ -55,7 +62,7 @@ a {
 
 
 p {
-    color: burlywood;
+    color: white;
     z-index: 4;
     font-size: 2em;
 }
@@ -66,6 +73,7 @@ p {
     top: 20%;
     left: 1em;
     background-color: #d8c11d;
+    color: #000;
     padding: .2em 1em;
     z-index: 2;
 }
@@ -191,6 +199,12 @@ main {
     margin-top: 4%;
 }
 
+#stregtopfran {
+    width: 30%;
+    margin-top: 4%;
+    margin-left: 60%;
+}
+
 #stregbund {
     position: relative;
     width: 100%;
@@ -203,23 +217,25 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    font-family: 'street';
     font-weight: 100;
     position: relative;
 }
 
 #sigjatext {
     padding: 0%;
-    font-size: 10em;
+    width: 30%;
+    font-size: 20em;
     position: absolute;
-    right: 74%;
+    font-family: 'street';
+    right: 60%;
     z-index: 3;
-    margin-top: 20%;
+    margin-top: 16%;
 
 }
 
 #tekstJa {
     width: 25%;
+    font-size: 2.5em;
     line-height: 1.6em;
     position: absolute;
     margin-top: 20%;
@@ -260,6 +276,9 @@ main {
     position: absolute;
     bottom: 35%;
     left: 70%;;
+    font-size: 6em;
+    color: #D8C11D;
+    font-family: 'street';
 }
 
 #prikker {
@@ -281,14 +300,29 @@ main {
 /* Parallax */
 .middle {
     position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
+    top: -33em;
+    z-index: 3;
     text-align: center;
 }
 
-.middle img {
+.container {
+    position: relative;
+}
+.container img {
+    z-index: 2;
+}
+
+#sortfigurtop {
+    position: absolute;
+    margin-top: 40%;
+}
+
+#sortfigurtop {
+    position: absolute;
+    margin-top: -12em;
+}
+
+.middle img, .container img {
     width: 100%;
 }
 
